Fix image distortion, remove button border

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -37,11 +37,11 @@ h2 {
 	flex-direction: row;
 	justify-content: center;
 	padding: 2rem;
+	height: 400px;
 }
 
 img {
-	width: 300px;
-	height: 400px;
+	height: 100%;
 }
 
 @media only screen and (max-width: 900px) {
@@ -51,12 +51,6 @@ img {
 
 	.photos img:last-child {
 		display: block;
-		width: 80%;
-		height: 80%;
-		max-width: 350px;
-	}
-	.photos {
-		align-content: center;
 	}
 }
 
@@ -81,6 +75,7 @@ button {
 	font-weight: 400;
 	background-color: rgba(188,43,255,0.7);
 	border-radius: 5px;
+	border: 0;
 	cursor: pointer;
 }
 
@@ -90,8 +85,7 @@ button:hover {
 
 @media only screen and (max-width: 900px) {
 	video {
-		width: 70%;
-		max-width: 250px;
+		width: 250px;
 		padding: 0;
 	}
 }
